--- a/School.UI/Web.config
+++ b/School.UI/Web.config
@@ -5,8 +5,10 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="connectionString" connectionString="Data Source=SphiweM;Initial Catalog=schooldb;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <!--<add name="connectionString" connectionString="Data Source=SphiweM;Initial Catalog=schooldb;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
     <add name="connectionStringAzure" connectionString="Server=tcp:spijoserversql.database.windows.net,1433;Initial Catalog=spijoschoolbd;Persist Security Info=False;User ID=Spijo;Password=MyPassword@321;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
+    <add name="connectionString" connectionString="Server=tcp:spijoserversql.database.windows.net,1433;Initial Catalog=spijoschoolbd;Persist Security Info=False;User ID=Spijo;Password=MyPassword@321;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
