--- a/School.UI/School.UI.csproj
+++ b/School.UI/School.UI.csproj
@@ -226,6 +226,7 @@
     <Content Include="AppJs\js_notes\Inheritance\inheritance_exp_1.js" />
     <Content Include="AppJs\Notes\notes - Copy.js" />
     <Content Include="AppJs\Notes\notes.js" />
+    <Content Include="Content\css_mine\commonTableFooter.css" />
     <Content Include="Content\css_mine\triangleArrow.css" />
     <Content Include="Content\css_mine\common.css" />
     <Content Include="images\school_img.jpg" />
@@ -248,6 +249,9 @@
     <Content Include="Views\StudentMarks\_TableRecordSubjectMarksOnly.cshtml" />
     <Content Include="Views\StudentAttendance\_TableStudentAttendance.cshtml" />
     <Content Include="Views\Student\css-tooltip-on-hover-div\Codeconvey - Free CSS Examples with Source Code.url" />
+    <Content Include="Views\LogIn\_PartialLogin_1.cshtml" />
+    <Content Include="Views\LogIn\_logInFormEdit.cshtml" />
+    <Content Include="Views\Grade\_TableGrade_Paging_Scope.cshtml" />
     <TypeScriptCompile Include="AppJs\js_notes\override\override_exp_1_class.ts" />
     <Content Include="AppJs\js_notes\mess\inheritance_exp_1.js" />
     <Content Include="AppJs\js_notes\mess\mss2.js" />
